Final CORS and Security config for production deployment